--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ mysqlclient==2.2.7
 nodeenv==1.9.1
 packaging==25.0
 pathspec==0.12.1
+pillow==12.0.0
 platformdirs==4.3.8
 pre_commit==4.2.0
 psycopg2-binary==2.9.10
